# stereo_data_collection

./: .gitignore  CMakeLists.txt  README.md  homography.txt
scripts/: estimate_homography.py  process_data.py
src/: get_video.cpp
